src/test/contracts/top_level_patterns/negative/cameligo/inside_mod_in.mligo
let x =
  module A = struct
    let (x, x) = (1, "1")
  end in
  A.x ^ "1"
